docs: add UserTask documentation
